# VitesseROS

./: LICENSE.md  README.md
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Ascan.msg
src/ros_parameter_demo/: package.xml  setup.cfg  setup.py
src/ros_parameter_demo/test/: test_motor_node.py
src/ros_parameter_demo/workflow/: backward_node.py  config.json  controller.py  forward_node.py  motor_node.py  motoron.py  processor.py  publisher.py
src/ros_parameter_demo/workflow/AscanProcessingModule/: __init__.py  __init__.pyi
src/ros_parameter_demo/workflow/VitesseAPI/: README.md  VitesseAPI.py  __init__.py  requirements.txt  sonoboticsFTDI.py  utils.py
src/ros_parameter_demo/workflow/VitesseAPI/drivers/linux_arm_FTDI/: unload_ftdi.sh
src/ros_parameter_demo/workflow/VitesseAPI/simulator/: sample_ascan_12.5mm.npy  sample_ascan_18.75mm.npy  sample_ascan_25mm.npy
src/ros_parameter_demo/workflow/VitesseAPI1/: README.md  sonoboticsFTDI.py  utils.py
src/ros_parameter_demo/workflow/VitesseAPI1/drivers/: arm_install.sh  x86_64_install.sh
src/ros_parameter_demo/workflow/VitesseAPI1/drivers/linux_x86_64_FTDI/: 99-ftdi.rules
src/ros_parameter_demo/workflow/VitesseAPI1/simulator/: sample_ascan_6.25mm.npy
