<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_parameter_demo</name>
  <version>0.0.0</version>
  <description>Python ROS Dynamic Parameter Demo</description>
  <maintainer email="ml4322@ic.ac.uk">maverick</maintainer>
  <license>SEE LICENSE IN LICENSE.md</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
